# roon-smb-watcher

./: README  build.sh  libsmb2binary.meson.build  meson.build  win32-cross.ini  x64-windows.ini
include/: roon_error.h
src/: roon_watcher.c  roon_watcher_tmp.c  roon_watcher_tmp.c~
